<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/background">
    <ImageView
        android:id="@+id/iv_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_username"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:layout_below="@id/iv_1"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_username"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"/>
    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_below="@id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:text="@string/checkbox_re"
            android:textColor="@color/grey"
            android:layout_gravity="left"
            android:layout_weight="3"/>

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/regist"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_weight="1"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_1"
        android:layout_marginTop="35dp"

        android:text="@string/button_confirm"
        android:layout_centerHorizontal="true"
        android:textColor="@color/grey" />

    <ImageButton
        android:id="@+id/im_qq"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_qq"
        android:scaleType="fitCenter"/>

</RelativeLayout>
